REGRESSION(r259480): Two new failing i18n tests https://bugs.webkit.org/show_bug.cgi?id=210605

Reviewed by Darin Adler.

JSTests:

* stress/date-toLocaleString.js:
Tests shouldn't rely on system default time zone.

Source/JavaScriptCore:

* runtime/IntlDateTimeFormat.cpp:
(JSC::isUTCEquivalent):
(JSC::defaultTimeZone):
(JSC::canonicalizeTimeZoneName):
The default time zone needs to be canonicalized too.

* runtime/IntlObject.cpp:
(JSC::canonicalLangTag):
(JSC::resolveLocale):
Deal with some odd ""_s cases from my previous patch.
(Drive-by fix inspired by Darin's comments on this one.)


Canonical link: https://commits.webkit.org/223510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260237 268f45cc-cd09-0410-ab3c-d52691b4dbfc